Accept buffer overflow patch.

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@ Fri Mar  4 2005  Joe Allen <jhallen@world.std.com>
 	Fix jpico lock-up problem (lmargin option was
 	not checking for invalid value of 0).
 
+	Accept buffer overflow patch.
+
 Thu Mar  3 2005  Joe Allen <jhallen@world.std.com>
 
 	New help screen for math.
